Images now has object-fit: contain to prevent stretch in Chrome.

--- a/wp-content/themes/mytheme/assets/styles/editor.css
+++ b/wp-content/themes/mytheme/assets/styles/editor.css
@@ -1020,6 +1020,8 @@ html {
   width: auto;
   height: 100%;
   max-width: 100%;
+  -o-object-fit: contain;
+  object-fit: contain;
 }
 
 /**
