--- a/wp-content/themes/mytheme/assets/styles/scss/04_module/_card.scss
+++ b/wp-content/themes/mytheme/assets/styles/scss/04_module/_card.scss
@@ -111,5 +111,6 @@
 		width: auto;
 		height: 100%;
 		max-width: 100%;
+		object-fit: contain;
 	}
 }
